Bug 291894 - widget clipping problem
Summary: widget clipping problem
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-18 19:17 UTC by Ralf Habacker
Modified: 2013-11-06 17:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2012-01-18 19:17:43 UTC
Version:           unspecified (using Devel) 
OS:                All

Loading xmi files from older versions like http://websvn.kde.org/*checkout*/trunk/KDE/kdesdk/umbrello/models/UmbrelloArchitecture/Overview.xmi?revision=860677 may result in wrongly clipped widgets because of size calculation bugs in those umbrello versions. 

This should be fixed.    

Reproducible: Always

Steps to Reproduce:
Load the file at the above mentioned link. 

Actual Results:  
Widget names are clipped by the widget border. 

Expected Results:  
Widget names should not be clipped by the widget border.
Comment 1 Ralf Habacker 2012-01-18 19:21:10 UTC
SVN commit 1274539 by habacker:

After loading of xmi objects clip the widget size against the allowed limits to make sure the widget size is in bound.


 M  +1 -0      umlview.cpp  
 M  +12 -0     widgets/umlwidget.cpp  
 M  +2 -0      widgets/umlwidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1274539
Comment 2 Ralf Habacker 2012-01-19 22:40:34 UTC
SVN commit 1274738 by habacker:

Fixed widget font size calculation issue when loading poseidon321.xmi.

When setting a font we need to recalculate the font metrics too.


 M  +8 -8      umlwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1274738
Comment 3 Ralf Habacker 2012-01-19 22:40:36 UTC
SVN commit 1274739 by habacker:

Fixed association text clipping problem when loading poseidon321.xmi


 M  +1 -0      umlview.cpp  
 M  +28 -0     widgets/associationwidget.cpp  
 M  +1 -0      widgets/associationwidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1274739
Comment 4 Ralf Habacker 2012-01-19 22:43:45 UTC
If people do not like the automatic widget size clipping against the allowed limits, a related checkbox could be added to the general settings page.
Comment 5 Ralf Habacker 2012-01-19 22:57:08 UTC
SVN commit 1274742 by habacker:

Using setFont() in the constructor does not work in all cases
probably because of doc->loading() not. Also we need to skip the
call to updateComponentSize() when loading.


 M  +4 -1      umlwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1274742
Comment 6 Ralf Habacker 2013-11-06 17:33:30 UTC
set version-fixed-in from 4.8.0 changelog