After loading of xmi objects clip the widget size against the allowed limits to make sure the widget size is in bound.

BUG: 291894

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1274539