umbrello/umlview.cpp
@@ -3468,6 +3468,7 @@ bool UMLView::loadWidgetsFromXMI(QDomElement & qElement)
         widget = loadWidgetFromXMI(widgetElement);
         if (widget) {
             m_WidgetList.append(widget);
+            widget->clipSize();
             // In the interest of best-effort loading, in case of a
             // (widget == NULL) we still go on.
             // The individual widget's loadFromXMI method should
